--- a/lectures/index.html
+++ b/lectures/index.html
@@ -21,7 +21,12 @@
 </head>
 <body>
 <div id="parent"></div>
-<p><a href="#" id="prev" class="done"><< previous </a> <a href="#" id="next"> next >> </a></p>
+<input id="input">
+<button id="next">answer</button>
+<p>
+    <!--<a href="#" id="prev" class="done"><< previous </a> -->
+    <!--<a href="#" id="next"> next >> </a></p>-->
+
 <ul id="ul"></ul>
 </body>
 </html>
@@ -2612,7 +2617,8 @@
     //     }
     // });
     //     Модифицируйте предыдущую задачу так, чтобы кнопка назад была неактивной,
-    //     если сейчас показывается первый элемент, а кнопка вперед была неактивной, если сейчас показывается последний
+    //     если сейчас показывается первый элемент,
+    //     а кнопка вперед была неактивной, если сейчас показывается последний
     //     элемент.
     // var arr = ['0', '1', '2', '3', '4'];
     // var parent = document.getElementById('parent');
@@ -2649,6 +2655,151 @@
     //     }
     // });
 
+    //
+    // Лекция №11 по JavaScript. Домашняя работа
+    // Задачи
+
+    // Дан массив со вопросами. Покажите пользователю первый вопрос из массива, а под ним сделайте ссылку,
+    // по нажатию на которую будет показываться следующий вопрос из массива.
+    //
+    // var questions = ['1', '2', '3', '4', '5'];
+    // var next = document.getElementById('next');
+    // var parent = document.getElementById('parent');
+    //
+    // var index = 0;
+    // parent.innerHTML = questions[index];
+    //
+    // next.addEventListener("click", function nextVal() {
+    //     index++;
+    //     if (index == questions.length-1){
+    //         next.removeEventListener("click", nextVal);
+    //     }
+    //     parent.innerHTML = questions[index];
+    //
+    // });
+
+    //     Модифицируйте предыдущую задачу. Сделайте так, чтобы под вопросом показывались инпут и кнопка.
+    //     В инпут пользователь будет вводить ответ на вопрос и нажимать на кнопку.
+    //     Сформируйте массив ответов пользователя. После того,
+    //
+    var questions = ['1', '2', '3', '4', '5'];
+    var next = document.getElementById('next');
+    var parent = document.getElementById('parent');
+    var inp = document.getElementById('input');
+
+    var index = 0;
+    // var answers = [];
+    parent.innerHTML = questions[index];
+
+    next.addEventListener("click", function nextVal() {
+        var answers = [];
+        index++;
+        if (index > questions.length) {
+            next.removeEventListener("click", nextVal);
+
+        }
+        answers.push(inp.value);
+        console.log(inp.value);
+        inp.value = '';
+        parent.innerHTML = questions[index];
+        return answers;
+
+    });
 
 
+
+    //     Модифицируйте предыдущую задачу так, чтобы, когда пользователь ответит на все вопросы,
+    //     на экран вывелся список вопросов и рядом с каждым вопросом - ответ, который дал на него пользователь.
+    //
+    //     Пусть теперь кроме массива вопросов, есть еще и массив правильных ответов.
+    //     Модифицируйте предыдущую задачу так, чтобы после того, как пользователь ответит на все вопросы,
+    //     на экран вывелся список этих вопросов, рядом с каждым ответ пользователя и, если этот ответ
+    //     неправильный, еще и правильный ответ.
+    //
+    //     Пусть теперь массив вопросов и массив правильных ответов будут храниться в таком виде:
+    //
+    //     this.state = {
+    //         test: [
+    //             {
+    //                 question: 'Вопрос 1',
+    //                 right: 'Правильный ответ 1',
+    //             },
+    //             {
+    //                 question: 'Вопрос 2',
+    //                 right: 'Правильный ответ 2',
+    //             },
+    //             {
+    //                 question: 'Вопрос 3',
+    //                 right: 'Правильный ответ 3',
+    //             },
+    //         ]
+    //     };
+    // Переделайте предыдущую задачу, чтобы она работала с этим массивом.
+    //
+    //     Задачи
+
+    // Даны 3 радиокнопочки. Дан также абзац. Сделайте так, чтобы в этот абзац всегда выводилось value
+    // отмеченной кнопочки.
+    //
+    //     Дан массив. Модифицируйте предыдущую задачу так, чтобы радиокнопочки сформировались в цикле,
+    //     при этом их value должны браться из массива.
+    //
+    //     Дано 5 групп, состоящих из 3 радиокнопочек и абзаца. В каждой группе может быть отмечена только
+    //     одна радиокнопочка. Сделайте так, чтобы содержимое атрибута value каждой отмеченной радиокнопочки
+    //     выводилось в соответствующий абзац.
+    //
+    //     Модифицируйте предыдущую задачу так, чтобы группы радиокнопочек формировались из следующего массива:
+    //
+    //     [
+    //         {
+    //             '1-1',
+    //             '1-2',
+    //             '1-3',
+    //         },
+    //         {
+    //             '2-1',
+    //             '2-2',
+    //             '2-3',
+    //         },
+    //         {
+    //             '3-1',
+    //             '3-2',
+    //             '3-3',
+    //         },
+    //         {
+    //             '4-1',
+    //             '4-2',
+    //             '4-3',
+    //         },
+    //         {
+    //             '5-1',
+    //             '5-2',
+    //             '5-3',
+    //         },
+    //     ]
+    // Тесты
+    // Дан следующий массив с вопросами и вариантами ответов:
+    //
+    //     [
+    //         {
+    //             question: 'Вопрос 1',
+    //             answers: [
+    //                 'Ответ 1',
+    //                 'Ответ 2',
+    //                 'Ответ 3',
+    //                 'Ответ 4',
+    //                 'Ответ 5',
+    //             ],
+    //             right: 3, //номер правильного ответа
+    //         },
+    //         {
+    //             ...
+    //         },
+    //         {
+    //             ...
+    //         },
+    //     ]
+    // Реализуйте текст с вопросами и вариантами ответов. Каждый вопрос должен быть в своем абзаце,
+    // а под ним - 5 радиокнопочек, с помощью которых можно выбрать один из ответов.
+    // Если ответ правильный - вопрос должен покраситься в зеленый цвет, а если неправильный - в красный.
 </script>
