--- a/lectures/index.html
+++ b/lectures/index.html
@@ -21,14 +21,7 @@
 </head>
 <body>
 <div id="parent"></div>
-<!--<input id="input">-->
-<!--<button id="next">answer</button>-->
-<input type="radio" id="1" value="ddd">ddd
-<input type="radio" id="2" value="aaa">aaa
-<input type="radio" id="3" value="bbb">bbb
-<p id="par"></p>
-<!--<a href="#" id="prev" class="done"><< previous </a> -->
-<!--<a href="#" id="next"> next >> </a></p>-->
+<!--<p id="par"></p>-->
 
 <ul id="ul"></ul>
 </body>
@@ -2782,37 +2775,53 @@
     // Даны 3 радиокнопочки. Дан также абзац. Сделайте так, чтобы в этот абзац всегда выводилось value
     // отмеченной кнопочки.
     //
-    var radio = document.querySelectorAll("input");
-    console.log(radio);
-
-    initRadios(radio);
-
-    function initRadios(array) {
-        for (var i = 0; i < array.length; i++) {
-
-            array[i].addEventListener("click", function () {
-
-                console.log(findChecked(array));
-
-            });
-        }
-    }
-
-    function findChecked(array) {
-        for (var i = 0; i < array.length; i++) {
-            if (array[i].checked == true) {
-
-                return i;
-
-            }
-            ;
-        }
-    }
+    // var radio = document.querySelectorAll("input");
+    // var p = document.getElementById('par');
+    // initRadios(radio);
+    //
+    // function initRadios(array) {
+    //     for (var i = 0; i < array.length; i++) {
+    //
+    //         array[i].addEventListener("click", function () {
+    //
+    //             p.innerHTML = this.value;
+    //
+    //         });
+    //     }
+    // }
 
 
     //     Дан массив. Модифицируйте предыдущую задачу так, чтобы радиокнопочки сформировались в цикле,
     //     при этом их value должны браться из массива.
     //
+    // var values = [1, 2, 3];
+    // var parent = document.getElementById('parent');
+    //
+    //
+    // createRadios(values, parent);
+    //
+    // function createRadios(values, parent) {
+    //
+    //     for (var i = 0; i < values.length; i++) {
+    //         var radio = document.createElement("input");
+    //         radio.name = '1';
+    //         radio.type = 'radio';
+    //         radio.value = values[i];
+    //         radioHandler(radio, p);
+    //         parent.appendChild(radio);
+    //
+    //     }
+    //
+    // }
+    //
+    // function radioHandler(elem, parent) {
+    //
+    //     elem.addEventListener("click", function () {
+    //         parent.innerHTML = this.value;
+    //     });
+    //
+    // }
+
     //     Дано 5 групп, состоящих из 3 радиокнопочек и абзаца. В каждой группе может быть отмечена только
     //     одна радиокнопочка. Сделайте так, чтобы содержимое атрибута value каждой отмеченной радиокнопочки
     //     выводилось в соответствующий абзац.
@@ -2846,6 +2855,72 @@
     //             '5-3',
     //         },
     //     ]
+
+    var parent = document.getElementById('parent');
+    var scheme = [
+        [
+            '1-1',
+            '1-2',
+            '1-3',
+        ],
+        [
+            '2-1',
+            '2-2',
+            '2-3',
+        ],
+        [
+            '3-1',
+            '3-2',
+            '3-3',
+        ],
+        [
+            '4-1',
+            '4-2',
+            '4-3',
+        ],
+        [
+            '5-1',
+            '5-2',
+            '5-3',
+        ],
+    ];
+
+
+    console.log(scheme);
+
+    createGroup(scheme, parent);
+
+    function createGroup(arr, parent) {
+        for (var i = 0; i < arr.length; i++) {
+
+            for (var j = 0; j < arr[i].length; j++) {
+
+                var radio = document.createElement("input");
+                radio.type = 'radio';
+                var atr = arr[i][j].split('-');
+
+                radio.name = atr[0];
+                radio.value = atr[1];
+                radioHandler(radio);
+                parent.appendChild(radio);
+
+            }
+            var p = document.createElement('p');
+            p.id = atr[0];
+            parent.appendChild(p);
+        }
+    }
+
+    function radioHandler(elem) {
+        elem.addEventListener("click", function () {
+
+            console.log();
+            // .innerHTML = this.value;
+
+        })
+
+    }
+
     // Тесты
     // Дан следующий массив с вопросами и вариантами ответов:
     //
